feat: implement API

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "api": "node server.js"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -16,7 +17,9 @@
     "@mui/material": "^6.1.2",
     "@mui/x-data-grid": "^7.19.0",
     "@mui/x-date-pickers": "^7.19.0",
-    "dayjs": "^1.11.13",
+    "date-fns": "^2.30.0",
+    "express": "^4.21.0",
+    "mui-popover-date-range-picker": "^1.0.1",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
