--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.1.2",
     "@mui/x-data-grid": "^7.19.0",
     "@mui/x-date-pickers": "^7.19.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^4.21.0",
     "mui-popover-date-range-picker": "^1.0.1",
